Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-37785

QtLocation doesn't compile on MSVC2013

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.4.0
    • 5.3.0 Beta1
    • Location, Positioning
    • None

      Creating library D:\dev\5-vs13-dev\qt-dev\qtbase\lib\Qt5Locationd.lib and obj
      ect D:\dev\5-vs13-dev\qt-dev\qtbase\lib\Qt5Locationd.exp
      qgeomapscene.obj : error LNK2019: unresolved external symbol "__declspec(dllimpo
      rt) public: _cdecl QDoubleVector3D::operator class QVector3D(void)const " (_im
      p_??BQDoubleVector3D@@QEBA?AVQVector3D@@XZ) referenced in function "public: void
      __cdecl QGeoMapRootNode::updateTiles(class QGeoMapTileContainerNode *,class QGe
      oMapScenePrivate *,double)" (?updateTiles@QGeoMapRootNode@@QEAAXPEAVQGeoMapTileC
      ontainerNode@@PEAVQGeoMapScenePrivate@@N@Z)
      D:\dev\5-vs13-dev\qt-dev\qtbase\lib\Qt5Locationd.dll : fatal error LNK1120: 1 un
      resolved externals
      NMAKE : fatal error U1077: '"C:\Program Files (x86)\Microsoft Visual Studio 12.0
      \VC\BIN\amd64\link.EXE"' : return code '0x460'
      Stop.
      NMAKE : fatal error U1077: '"C:\Program Files (x86)\Microsoft Visual Studio 12.0
      \VC\BIN\amd64\nmake.exe"' : return code '0x2'
      Stop.
      NMAKE : fatal error U1077: 'cd' : return code '0x2'
      Stop.
      NMAKE : fatal error U1077: 'cd' : return code '0x2'

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ablasche Alex Blasche
            ablasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes