Remove QDoubleVector*d symbols only needed by QtLocation

It causes random linker errors on Windows. Now the conversions are
done manually.

Task-number: QTBUG-37785
Change-Id: I5586b314d1f55a75464920f23a23f77a08b45d89
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>